# swagger.yml
@@ -13,7 +13,7 @@ definitions:
       description:
         type: string
         minLength: 1
-      compoleted:
+      completed:
         type: boolean
   error:
     type: object
@@ -53,6 +53,56 @@ paths:
               $ref: "#/definitions/item"
         default:
           description: generic error response
+          schema:
+            $ref: '#/definitions/error'
+    post:
+      tags:
+        - todos
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/item"
+      responses:
+        201:
+          description: Created
+          schema:
+            $ref: '#/definitions/item'
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/error'
+  /{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+    put:
+      tags: ["todos"]
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/item'
+      responses:
+        200:
+          description: ok
+          schema:
+            $ref: '#/definitions/item'
+        default:
+          description: error
+          schema:
+            $ref: '#/definitions/error'
+    delete:
+      tags:
+        - todos
+      responses:
+        204:
+          description: Deleted
+        default:
+          description: error
           schema:
             $ref: '#/definitions/error'
 produces:
